[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dos-detector-mcp"
version = "0.1.0"
description = "DoS/DDoS Attack Detection - Log analysis, traffic patterns, and anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
dos-detector-mcp = "dos_detector_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dos_detector_mcp"]
